// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`truthEngineV1 fixtures (deterministic, bounded) > baseload drift yields a DRIFT anomaly (when long enough) 1`] = `
{
  "anomalyLedgerV1": [
    {
      "class": "DRIFT",
      "confidence": 0.9,
      "id": "truthv1|DRIFT|2026-01-01T00:00:00.000Z|2026-02-26T00:00:00.000Z|1",
      "likelyDrivers": [
        "setpoint change",
        "controls degradation",
        "occupancy change",
      ],
      "magnitudeKwhOrKw": 16.089729,
      "requiredNextData": [
        "controls change log",
        "trend AHU/CHW/HW supply temps and runtimes",
      ],
      "window": {
        "endIso": "2026-02-26T00:00:00.000Z",
        "startIso": "2026-01-01T00:00:00.000Z",
      },
    },
    {
      "class": "SCHEDULE",
      "confidence": 0.85,
      "id": "truthv1|SCHEDULE|2026-01-01T00:00:00.000Z|2026-02-26T00:00:00.000Z|1",
      "likelyDrivers": [
        "schedule mismatch",
        "weekend occupancy",
        "timezone/DST issue",
      ],
      "magnitudeKwhOrKw": 15.212625,
      "requiredNextData": [
        "confirm operating hours",
        "export schedules (BMS) and compare to interval data",
      ],
      "window": {
        "endIso": "2026-02-26T00:00:00.000Z",
        "startIso": "2026-01-01T00:00:00.000Z",
      },
    },
  ],
  "baselineModelV1": {
    "fitQuality": {
      "r2": 0.66912,
      "tier": "A",
    },
    "modelKind": "INTERVAL_WEATHER_HOURLY_REGRESSION_V1",
    "notes": [],
    "params": {
      "coeffsSummary": [
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 25.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 25.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 25.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 25.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 25.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 33.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 33.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 33.401688,
          "n": 56,
        },
        {
          "aCdd": -4.610283,
          "aHdd": -1.281606,
          "intercept": 82.676743,
          "n": 56,
        },
        {
          "aCdd": -4.610283,
          "aHdd": -1.281606,
          "intercept": 82.676743,
          "n": 56,
        },
        {
          "aCdd": -4.610283,
          "aHdd": -1.281606,
          "intercept": 82.676743,
          "n": 56,
        },
        {
          "aCdd": -4.610283,
          "aHdd": -1.281606,
          "intercept": 82.676743,
          "n": 56,
        },
        {
          "aCdd": -4.610283,
          "aHdd": -1.281606,
          "intercept": 82.676743,
          "n": 56,
        },
        {
          "aCdd": -4.610283,
          "aHdd": -1.281606,
          "intercept": 82.676743,
          "n": 56,
        },
        {
          "aCdd": -4.610283,
          "aHdd": -1.281606,
          "intercept": 82.676743,
          "n": 56,
        },
        {
          "aCdd": -4.610283,
          "aHdd": -1.281606,
          "intercept": 82.676743,
          "n": 56,
        },
        {
          "aCdd": -4.610283,
          "aHdd": -1.281606,
          "intercept": 82.676743,
          "n": 56,
        },
        {
          "aCdd": -4.610283,
          "aHdd": -1.281606,
          "intercept": 82.676743,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 33.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 33.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 33.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 33.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 33.401688,
          "n": 56,
        },
        {
          "aCdd": 0.030509,
          "aHdd": 0.177559,
          "intercept": 33.401688,
          "n": 56,
        },
      ],
      "granularityMinutes": 60,
      "intervalDays": 55.958,
      "minDaysPerHour": 10,
      "timezoneUsed": "UTC",
      "weatherDays": 56,
    },
  },
  "changepointsV1": [],
  "coverage": {
    "granularityMinutes": 60,
    "hasBillText": false,
    "hasInterval": true,
    "hasWeatherDaily": true,
    "intervalDays": 55.958,
    "weatherDays": 56,
  },
  "expectedSeriesSummaryV1": {
    "expectedKwByHour": [
      26.625,
      26.625,
      26.625,
      26.625,
      26.625,
      34.625,
      34.625,
      34.625,
      66.767857,
      66.767857,
      66.767857,
      66.767857,
      66.767857,
      66.767857,
      66.767857,
      66.767857,
      66.767857,
      66.767857,
      34.625,
      34.625,
      34.625,
      34.625,
      34.625,
      34.625,
    ],
    "expectedKwByHourWeekday": [
      26.695,
      26.695,
      26.695,
      26.695,
      26.695,
      34.695,
      34.695,
      34.695,
      79.695,
      79.695,
      79.695,
      79.695,
      79.695,
      79.695,
      79.695,
      79.695,
      79.695,
      79.695,
      34.695,
      34.695,
      34.695,
      34.695,
      34.695,
      34.695,
    ],
    "expectedKwByHourWeekend": [
      26.45,
      26.45,
      26.45,
      26.45,
      26.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
      34.45,
    ],
    "kind": "HOURLY_PROFILE",
    "notes": [],
    "sampleCount": 1344,
    "timezoneUsed": "UTC",
  },
  "generatedAtIso": "2026-03-01T00:00:00.000Z",
  "residualMapsV1": {
    "hourlyResidualByDow": [
      [
        -0.361422,
        -0.361422,
        -0.361422,
        -0.361422,
        -0.361422,
        -0.361421,
        -0.361421,
        -0.361421,
        -21.908432,
        -21.908432,
        -21.908432,
        -21.908432,
        -21.908432,
        -21.908432,
        -21.908432,
        -21.908432,
        -21.908432,
        -21.908432,
        -0.361421,
        -0.361421,
        -0.361421,
        -0.361421,
        -0.361421,
        -0.361421,
      ],
      [
        -0.011422,
        -0.011422,
        -0.011422,
        -0.011422,
        -0.011422,
        -0.011421,
        -0.011421,
        -0.011421,
        23.441568,
        23.441568,
        23.441568,
        23.441568,
        23.441568,
        23.441568,
        23.441568,
        23.441568,
        23.441568,
        23.441568,
        -0.011421,
        -0.011421,
        -0.011421,
        -0.011421,
        -0.011421,
        -0.011421,
      ],
      [
        0.579642,
        0.579642,
        0.579642,
        0.579642,
        0.579642,
        0.579642,
        0.579642,
        0.579642,
        16.965353,
        16.965353,
        16.965353,
        16.965353,
        16.965353,
        16.965353,
        16.965353,
        16.965353,
        16.965353,
        16.965353,
        0.579642,
        0.579642,
        0.579642,
        0.579642,
        0.579642,
        0.579642,
      ],
      [
        1.364022,
        1.364022,
        1.364022,
        1.364022,
        1.364022,
        1.364022,
        1.364022,
        1.364022,
        5.014935,
        5.014935,
        5.014935,
        5.014935,
        5.014935,
        5.014935,
        5.014935,
        5.014935,
        5.014935,
        5.014935,
        1.364022,
        1.364022,
        1.364022,
        1.364022,
        1.364022,
        1.364022,
      ],
      [
        -0.714484,
        -0.714484,
        -0.714484,
        -0.714484,
        -0.714484,
        -0.714484,
        -0.714484,
        -0.714484,
        2.306288,
        2.306288,
        2.306288,
        2.306288,
        2.306288,
        2.306288,
        2.306288,
        2.306288,
        2.306288,
        2.306288,
        -0.714484,
        -0.714484,
        -0.714484,
        -0.714484,
        -0.714484,
        -0.714484,
      ],
      [
        -0.385978,
        -0.385978,
        -0.385978,
        -0.385978,
        -0.385978,
        -0.385978,
        -0.385978,
        -0.385978,
        3.264935,
        3.264935,
        3.264935,
        3.264935,
        3.264935,
        3.264935,
        3.264935,
        3.264935,
        3.264935,
        3.264935,
        -0.385978,
        -0.385978,
        -0.385978,
        -0.385978,
        -0.385978,
        -0.385978,
      ],
      [
        -0.470359,
        -0.470359,
        -0.470359,
        -0.470359,
        -0.470359,
        -0.470358,
        -0.470358,
        -0.470358,
        -29.084647,
        -29.084647,
        -29.084647,
        -29.084647,
        -29.084647,
        -29.084647,
        -29.084647,
        -29.084647,
        -29.084647,
        -29.084647,
        -0.470358,
        -0.470358,
        -0.470358,
        -0.470358,
        -0.470358,
        -0.470358,
      ],
    ],
    "peakResidualHours": [
      {
        "dow": 6,
        "hour": 8,
        "meanResidualKw": -29.084647,
        "sampleCount": 8,
      },
      {
        "dow": 6,
        "hour": 9,
        "meanResidualKw": -29.084647,
        "sampleCount": 8,
      },
      {
        "dow": 6,
        "hour": 10,
        "meanResidualKw": -29.084647,
        "sampleCount": 8,
      },
      {
        "dow": 6,
        "hour": 11,
        "meanResidualKw": -29.084647,
        "sampleCount": 8,
      },
      {
        "dow": 6,
        "hour": 12,
        "meanResidualKw": -29.084647,
        "sampleCount": 8,
      },
      {
        "dow": 6,
        "hour": 13,
        "meanResidualKw": -29.084647,
        "sampleCount": 8,
      },
      {
        "dow": 6,
        "hour": 14,
        "meanResidualKw": -29.084647,
        "sampleCount": 8,
      },
      {
        "dow": 6,
        "hour": 15,
        "meanResidualKw": -29.084647,
        "sampleCount": 8,
      },
      {
        "dow": 6,
        "hour": 16,
        "meanResidualKw": -29.084647,
        "sampleCount": 8,
      },
      {
        "dow": 6,
        "hour": 17,
        "meanResidualKw": -29.084647,
        "sampleCount": 8,
      },
    ],
  },
  "schemaVersion": "truthSnapshotV1",
  "truthConfidence": {
    "reasons": [
      "baselineR2=0.66912",
      "baselineTier=A",
      "granularityMinutes=60",
      "hasBillText=false",
      "hasWeatherDaily=true",
      "intervalDays=55.958",
      "weatherDays=56",
    ],
    "tier": "A",
  },
  "truthWarnings": [],
}
`;

exports[`truthEngineV1 fixtures (deterministic, bounded) > missing weather falls back to interval-only seasonal profile baseline 1`] = `
{
  "anomalyLedgerV1": [],
  "baselineModelV1": {
    "fitQuality": {
      "r2": 1,
      "tier": "A",
    },
    "modelKind": "INTERVAL_PROFILE_SEASONAL_V1",
    "notes": [],
    "params": {
      "bucketsUsed": [
        "2026-01",
      ],
      "granularityMinutes": 60,
      "intervalDays": 29.958,
      "minSamplesPerBucket": 8,
      "timezoneUsed": "UTC",
    },
  },
  "changepointsV1": [],
  "coverage": {
    "granularityMinutes": 60,
    "hasBillText": true,
    "hasInterval": true,
    "hasWeatherDaily": false,
    "intervalDays": 29.958,
    "weatherDays": null,
  },
  "expectedSeriesSummaryV1": {
    "expectedKwByHour": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      58,
      58,
      58,
      58,
      58,
      58,
      58,
      58,
      58,
      58,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "expectedKwByHourWeekday": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "expectedKwByHourWeekend": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "kind": "HOURLY_PROFILE",
    "notes": [],
    "sampleCount": 720,
    "timezoneUsed": "UTC",
  },
  "generatedAtIso": "2026-03-01T00:00:00.000Z",
  "residualMapsV1": {
    "hourlyResidualByDow": [
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    ],
    "peakResidualHours": [
      {
        "dow": 4,
        "hour": 0,
        "meanResidualKw": 0,
        "sampleCount": 5,
      },
      {
        "dow": 4,
        "hour": 1,
        "meanResidualKw": 0,
        "sampleCount": 5,
      },
      {
        "dow": 4,
        "hour": 2,
        "meanResidualKw": 0,
        "sampleCount": 5,
      },
      {
        "dow": 4,
        "hour": 3,
        "meanResidualKw": 0,
        "sampleCount": 5,
      },
      {
        "dow": 4,
        "hour": 4,
        "meanResidualKw": 0,
        "sampleCount": 5,
      },
      {
        "dow": 4,
        "hour": 5,
        "meanResidualKw": 0,
        "sampleCount": 5,
      },
      {
        "dow": 4,
        "hour": 6,
        "meanResidualKw": 0,
        "sampleCount": 5,
      },
      {
        "dow": 4,
        "hour": 7,
        "meanResidualKw": 0,
        "sampleCount": 5,
      },
      {
        "dow": 4,
        "hour": 8,
        "meanResidualKw": 0,
        "sampleCount": 5,
      },
      {
        "dow": 4,
        "hour": 9,
        "meanResidualKw": 0,
        "sampleCount": 5,
      },
    ],
  },
  "schemaVersion": "truthSnapshotV1",
  "truthConfidence": {
    "reasons": [
      "baselineR2=1",
      "baselineTier=A",
      "granularityMinutes=60",
      "hasBillText=true",
      "hasWeatherDaily=false",
      "intervalDays=29.958",
    ],
    "tier": "A",
  },
  "truthWarnings": [
    "truth.anomalies.residual_scale_unstable",
    "truth.baseline.missing_weather_daily",
  ],
}
`;

exports[`truthEngineV1 fixtures (deterministic, bounded) > schedule shift yields a SCHEDULE_SHIFT changepoint 1`] = `
{
  "anomalyLedgerV1": [
    {
      "class": "VOLATILITY",
      "confidence": 0.9,
      "id": "truthv1|VOLATILITY|2026-01-10T00:00:00.000Z|2026-01-11T00:00:00.000Z|1",
      "likelyDrivers": [
        "unstable controls",
        "intermittent process loads",
        "irregular occupancy",
      ],
      "magnitudeKwhOrKw": 19.867326,
      "requiredNextData": [
        "trend major equipment states",
        "check interval data completeness",
      ],
      "window": {
        "endIso": "2026-01-11T00:00:00.000Z",
        "startIso": "2026-01-10T00:00:00.000Z",
      },
    },
    {
      "class": "VOLATILITY",
      "confidence": 0.9,
      "id": "truthv1|VOLATILITY|2026-01-11T00:00:00.000Z|2026-01-12T00:00:00.000Z|2",
      "likelyDrivers": [
        "unstable controls",
        "intermittent process loads",
        "irregular occupancy",
      ],
      "magnitudeKwhOrKw": 19.321016,
      "requiredNextData": [
        "trend major equipment states",
        "check interval data completeness",
      ],
      "window": {
        "endIso": "2026-01-12T00:00:00.000Z",
        "startIso": "2026-01-11T00:00:00.000Z",
      },
    },
    {
      "class": "VOLATILITY",
      "confidence": 0.9,
      "id": "truthv1|VOLATILITY|2026-01-03T00:00:00.000Z|2026-01-04T00:00:00.000Z|3",
      "likelyDrivers": [
        "unstable controls",
        "intermittent process loads",
        "irregular occupancy",
      ],
      "magnitudeKwhOrKw": 17.078242,
      "requiredNextData": [
        "trend major equipment states",
        "check interval data completeness",
      ],
      "window": {
        "endIso": "2026-01-04T00:00:00.000Z",
        "startIso": "2026-01-03T00:00:00.000Z",
      },
    },
    {
      "class": "VOLATILITY",
      "confidence": 0.9,
      "id": "truthv1|VOLATILITY|2026-01-17T00:00:00.000Z|2026-01-18T00:00:00.000Z|4",
      "likelyDrivers": [
        "unstable controls",
        "intermittent process loads",
        "irregular occupancy",
      ],
      "magnitudeKwhOrKw": 17.078242,
      "requiredNextData": [
        "trend major equipment states",
        "check interval data completeness",
      ],
      "window": {
        "endIso": "2026-01-18T00:00:00.000Z",
        "startIso": "2026-01-17T00:00:00.000Z",
      },
    },
    {
      "class": "VOLATILITY",
      "confidence": 0.9,
      "id": "truthv1|VOLATILITY|2026-01-04T00:00:00.000Z|2026-01-05T00:00:00.000Z|5",
      "likelyDrivers": [
        "unstable controls",
        "intermittent process loads",
        "irregular occupancy",
      ],
      "magnitudeKwhOrKw": 13.810362,
      "requiredNextData": [
        "trend major equipment states",
        "check interval data completeness",
      ],
      "window": {
        "endIso": "2026-01-05T00:00:00.000Z",
        "startIso": "2026-01-04T00:00:00.000Z",
      },
    },
    {
      "class": "VOLATILITY",
      "confidence": 0.9,
      "id": "truthv1|VOLATILITY|2026-01-18T00:00:00.000Z|2026-01-19T00:00:00.000Z|6",
      "likelyDrivers": [
        "unstable controls",
        "intermittent process loads",
        "irregular occupancy",
      ],
      "magnitudeKwhOrKw": 13.810362,
      "requiredNextData": [
        "trend major equipment states",
        "check interval data completeness",
      ],
      "window": {
        "endIso": "2026-01-19T00:00:00.000Z",
        "startIso": "2026-01-18T00:00:00.000Z",
      },
    },
    {
      "class": "SCHEDULE",
      "confidence": 0.85,
      "id": "truthv1|SCHEDULE|2026-01-01T00:00:00.000Z|2026-02-12T00:00:00.000Z|1",
      "likelyDrivers": [
        "schedule mismatch",
        "weekend occupancy",
        "timezone/DST issue",
      ],
      "magnitudeKwhOrKw": 7.16759,
      "requiredNextData": [
        "confirm operating hours",
        "export schedules (BMS) and compare to interval data",
      ],
      "window": {
        "endIso": "2026-02-12T00:00:00.000Z",
        "startIso": "2026-01-01T00:00:00.000Z",
      },
    },
  ],
  "baselineModelV1": {
    "fitQuality": {
      "r2": 0.830826,
      "tier": "A",
    },
    "modelKind": "INTERVAL_WEATHER_HOURLY_REGRESSION_V1",
    "notes": [],
    "params": {
      "coeffsSummary": [
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 17,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 17,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 17,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 17,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 17,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 42,
        },
        {
          "aCdd": -2.800374,
          "aHdd": -0.468155,
          "intercept": 71.18281,
          "n": 42,
        },
        {
          "aCdd": -2.800374,
          "aHdd": -0.468155,
          "intercept": 71.18281,
          "n": 42,
        },
        {
          "aCdd": -2.800374,
          "aHdd": -0.468155,
          "intercept": 71.18281,
          "n": 42,
        },
        {
          "aCdd": -2.800374,
          "aHdd": -0.468155,
          "intercept": 71.18281,
          "n": 42,
        },
        {
          "aCdd": -2.800374,
          "aHdd": -0.468155,
          "intercept": 71.18281,
          "n": 42,
        },
        {
          "aCdd": -2.800374,
          "aHdd": -0.468155,
          "intercept": 71.18281,
          "n": 42,
        },
        {
          "aCdd": -2.800374,
          "aHdd": -0.468155,
          "intercept": 71.18281,
          "n": 42,
        },
        {
          "aCdd": -2.800374,
          "aHdd": -0.468155,
          "intercept": 71.18281,
          "n": 42,
        },
        {
          "aCdd": -2.800374,
          "aHdd": -0.468155,
          "intercept": 71.18281,
          "n": 42,
        },
        {
          "aCdd": -2.800374,
          "aHdd": -0.468155,
          "intercept": 71.18281,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 42,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 42,
        },
      ],
      "granularityMinutes": 15,
      "intervalDays": 41.99,
      "minDaysPerHour": 10,
      "timezoneUsed": "UTC",
      "weatherDays": 42,
    },
  },
  "changepointsV1": [
    {
      "atIso": "2026-01-19T00:00:00.000Z",
      "confidence": 0.671429,
      "magnitude": 12.857143,
      "notes": [
        "windowDays=7",
        "prevMean=57.142857",
        "nextMean=70",
        "threshold=10",
      ],
      "type": "PEAK_SHIFT",
    },
    {
      "atIso": "2026-01-19T00:00:00.000Z",
      "confidence": 0.607143,
      "magnitude": -2.571429,
      "notes": [
        "windowDays=7",
        "prevMean=12.571429",
        "nextMean=10",
        "threshold=2.5",
      ],
      "type": "SCHEDULE_SHIFT",
    },
  ],
  "coverage": {
    "granularityMinutes": 15,
    "hasBillText": false,
    "hasInterval": true,
    "hasWeatherDaily": true,
    "intervalDays": 41.99,
    "weatherDays": 42,
  },
  "expectedSeriesSummaryV1": {
    "expectedKwByHour": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      63.571429,
      63.571429,
      63.571429,
      63.571429,
      63.571429,
      63.571429,
      63.571429,
      63.571429,
      63.571429,
      63.571429,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "expectedKwByHourWeekday": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "expectedKwByHourWeekend": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      47.5,
      47.5,
      47.5,
      47.5,
      47.5,
      47.5,
      47.5,
      47.5,
      47.5,
      47.5,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "kind": "HOURLY_PROFILE",
    "notes": [],
    "sampleCount": 1008,
    "timezoneUsed": "UTC",
  },
  "generatedAtIso": "2026-03-01T00:00:00.000Z",
  "residualMapsV1": {
    "hourlyResidualByDow": [
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        -10.393874,
        -10.393874,
        -10.393874,
        -10.393874,
        -10.393874,
        -10.393874,
        -10.393874,
        -10.393874,
        -10.393874,
        -10.393874,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        12.106126,
        12.106126,
        12.106126,
        12.106126,
        12.106126,
        12.106126,
        12.106126,
        12.106126,
        12.106126,
        12.106126,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        8.319278,
        8.319278,
        8.319278,
        8.319278,
        8.319278,
        8.319278,
        8.319278,
        8.319278,
        8.319278,
        8.319278,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1.157966,
        1.157966,
        1.157966,
        1.157966,
        1.157966,
        1.157966,
        1.157966,
        1.157966,
        1.157966,
        1.157966,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        1.495613,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        -14.180722,
        -14.180722,
        -14.180722,
        -14.180722,
        -14.180722,
        -14.180722,
        -14.180722,
        -14.180722,
        -14.180722,
        -14.180722,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    ],
    "peakResidualHours": [
      {
        "dow": 6,
        "hour": 8,
        "meanResidualKw": -14.180722,
        "sampleCount": 6,
      },
      {
        "dow": 6,
        "hour": 9,
        "meanResidualKw": -14.180722,
        "sampleCount": 6,
      },
      {
        "dow": 6,
        "hour": 10,
        "meanResidualKw": -14.180722,
        "sampleCount": 6,
      },
      {
        "dow": 6,
        "hour": 11,
        "meanResidualKw": -14.180722,
        "sampleCount": 6,
      },
      {
        "dow": 6,
        "hour": 12,
        "meanResidualKw": -14.180722,
        "sampleCount": 6,
      },
      {
        "dow": 6,
        "hour": 13,
        "meanResidualKw": -14.180722,
        "sampleCount": 6,
      },
      {
        "dow": 6,
        "hour": 14,
        "meanResidualKw": -14.180722,
        "sampleCount": 6,
      },
      {
        "dow": 6,
        "hour": 15,
        "meanResidualKw": -14.180722,
        "sampleCount": 6,
      },
      {
        "dow": 6,
        "hour": 16,
        "meanResidualKw": -14.180722,
        "sampleCount": 6,
      },
      {
        "dow": 6,
        "hour": 17,
        "meanResidualKw": -14.180722,
        "sampleCount": 6,
      },
    ],
  },
  "schemaVersion": "truthSnapshotV1",
  "truthConfidence": {
    "reasons": [
      "baselineR2=0.830826",
      "baselineTier=A",
      "granularityMinutes=15",
      "hasBillText=false",
      "hasWeatherDaily=true",
      "intervalDays=41.99",
      "weatherDays=42",
    ],
    "tier": "A",
  },
  "truthWarnings": [
    "truth.anomalies.residual_scale_unstable",
  ],
}
`;

exports[`truthEngineV1 fixtures (deterministic, bounded) > short interval coverage gates to lower confidence 1`] = `
{
  "anomalyLedgerV1": [],
  "baselineModelV1": {
    "fitQuality": {
      "r2": 0.506859,
      "tier": "C",
    },
    "modelKind": "INTERVAL_PROFILE_SEASONAL_V1",
    "notes": [],
    "params": {
      "bucketsUsed": [
        "2026-01",
      ],
      "granularityMinutes": 15,
      "intervalDays": 4.99,
      "minSamplesPerBucket": 8,
      "timezoneUsed": "UTC",
    },
  },
  "changepointsV1": [],
  "coverage": {
    "granularityMinutes": 15,
    "hasBillText": false,
    "hasInterval": true,
    "hasWeatherDaily": false,
    "intervalDays": 4.99,
    "weatherDays": null,
  },
  "expectedSeriesSummaryV1": {
    "expectedKwByHour": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      52,
      52,
      52,
      52,
      52,
      52,
      52,
      52,
      52,
      52,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "expectedKwByHourWeekday": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "expectedKwByHourWeekend": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "kind": "HOURLY_PROFILE",
    "notes": [],
    "sampleCount": 120,
    "timezoneUsed": "UTC",
  },
  "generatedAtIso": "2026-03-01T00:00:00.000Z",
  "residualMapsV1": {
    "hourlyResidualByDow": [
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        22.5,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        -22.5,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    ],
    "peakResidualHours": [
      {
        "dow": 1,
        "hour": 8,
        "meanResidualKw": 22.5,
        "sampleCount": 1,
      },
      {
        "dow": 1,
        "hour": 9,
        "meanResidualKw": 22.5,
        "sampleCount": 1,
      },
      {
        "dow": 1,
        "hour": 10,
        "meanResidualKw": 22.5,
        "sampleCount": 1,
      },
      {
        "dow": 1,
        "hour": 11,
        "meanResidualKw": 22.5,
        "sampleCount": 1,
      },
      {
        "dow": 1,
        "hour": 12,
        "meanResidualKw": 22.5,
        "sampleCount": 1,
      },
      {
        "dow": 1,
        "hour": 13,
        "meanResidualKw": 22.5,
        "sampleCount": 1,
      },
      {
        "dow": 1,
        "hour": 14,
        "meanResidualKw": 22.5,
        "sampleCount": 1,
      },
      {
        "dow": 1,
        "hour": 15,
        "meanResidualKw": 22.5,
        "sampleCount": 1,
      },
      {
        "dow": 1,
        "hour": 16,
        "meanResidualKw": 22.5,
        "sampleCount": 1,
      },
      {
        "dow": 1,
        "hour": 17,
        "meanResidualKw": 22.5,
        "sampleCount": 1,
      },
    ],
  },
  "schemaVersion": "truthSnapshotV1",
  "truthConfidence": {
    "reasons": [
      "baselineR2=0.506859",
      "baselineTier=C",
      "granularityMinutes=15",
      "hasBillText=false",
      "hasWeatherDaily=false",
      "intervalDays=4.99",
    ],
    "tier": "C",
  },
  "truthWarnings": [
    "truth.anomalies.insufficient_points",
    "truth.anomalies.residual_scale_unstable",
    "truth.baseline.insufficient_hourly_samples",
    "truth.baseline.interval_coverage_short",
    "truth.baseline.missing_weather_daily",
    "truth.changepoints.insufficient_days",
    "truth.confidence.short_interval_coverage",
    "truth.coverage.interval_coverage_very_short",
  ],
}
`;

exports[`truthEngineV1 fixtures (deterministic, bounded) > stable schedule with weather produces regression baseline + non-empty residual peaks 1`] = `
{
  "anomalyLedgerV1": [
    {
      "class": "SCHEDULE",
      "confidence": 0.85,
      "id": "truthv1|SCHEDULE|2026-01-01T00:00:00.000Z|2026-02-05T00:00:00.000Z|1",
      "likelyDrivers": [
        "schedule mismatch",
        "weekend occupancy",
        "timezone/DST issue",
      ],
      "magnitudeKwhOrKw": 14.512912,
      "requiredNextData": [
        "confirm operating hours",
        "export schedules (BMS) and compare to interval data",
      ],
      "window": {
        "endIso": "2026-02-05T00:00:00.000Z",
        "startIso": "2026-01-01T00:00:00.000Z",
      },
    },
  ],
  "baselineModelV1": {
    "fitQuality": {
      "r2": 0.721464,
      "tier": "A",
    },
    "modelKind": "INTERVAL_WEATHER_HOURLY_REGRESSION_V1",
    "notes": [],
    "params": {
      "coeffsSummary": [
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 17,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 17,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 17,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 17,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 17,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 35,
        },
        {
          "aCdd": -4.454582,
          "aHdd": -1.372127,
          "intercept": 73.217247,
          "n": 35,
        },
        {
          "aCdd": -4.454582,
          "aHdd": -1.372127,
          "intercept": 73.217247,
          "n": 35,
        },
        {
          "aCdd": -4.454582,
          "aHdd": -1.372127,
          "intercept": 73.217247,
          "n": 35,
        },
        {
          "aCdd": -4.454582,
          "aHdd": -1.372127,
          "intercept": 73.217247,
          "n": 35,
        },
        {
          "aCdd": -4.454582,
          "aHdd": -1.372127,
          "intercept": 73.217247,
          "n": 35,
        },
        {
          "aCdd": -4.454582,
          "aHdd": -1.372127,
          "intercept": 73.217247,
          "n": 35,
        },
        {
          "aCdd": -4.454582,
          "aHdd": -1.372127,
          "intercept": 73.217247,
          "n": 35,
        },
        {
          "aCdd": -4.454582,
          "aHdd": -1.372127,
          "intercept": 73.217247,
          "n": 35,
        },
        {
          "aCdd": -4.454582,
          "aHdd": -1.372127,
          "intercept": 73.217247,
          "n": 35,
        },
        {
          "aCdd": -4.454582,
          "aHdd": -1.372127,
          "intercept": 73.217247,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 35,
        },
        {
          "aCdd": 0,
          "aHdd": 0,
          "intercept": 25,
          "n": 35,
        },
      ],
      "granularityMinutes": 15,
      "intervalDays": 34.99,
      "minDaysPerHour": 10,
      "timezoneUsed": "UTC",
      "weatherDays": 35,
    },
  },
  "changepointsV1": [],
  "coverage": {
    "granularityMinutes": 15,
    "hasBillText": true,
    "hasInterval": true,
    "hasWeatherDaily": true,
    "intervalDays": 34.99,
    "weatherDays": 35,
  },
  "expectedSeriesSummaryV1": {
    "expectedKwByHour": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      57.142857,
      57.142857,
      57.142857,
      57.142857,
      57.142857,
      57.142857,
      57.142857,
      57.142857,
      57.142857,
      57.142857,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "expectedKwByHourWeekday": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      70,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "expectedKwByHourWeekend": [
      17,
      17,
      17,
      17,
      17,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
      25,
    ],
    "kind": "HOURLY_PROFILE",
    "notes": [],
    "sampleCount": 840,
    "timezoneUsed": "UTC",
  },
  "generatedAtIso": "2026-03-01T00:00:00.000Z",
  "residualMapsV1": {
    "hourlyResidualByDow": [
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        -21.146802,
        -21.146802,
        -21.146802,
        -21.146802,
        -21.146802,
        -21.146802,
        -21.146802,
        -21.146802,
        -21.146802,
        -21.146802,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        23.853198,
        23.853198,
        23.853198,
        23.853198,
        23.853198,
        23.853198,
        23.853198,
        23.853198,
        23.853198,
        23.853198,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        16.388245,
        16.388245,
        16.388245,
        16.388245,
        16.388245,
        16.388245,
        16.388245,
        16.388245,
        16.388245,
        16.388245,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        3.64339,
        3.64339,
        3.64339,
        3.64339,
        3.64339,
        3.64339,
        3.64339,
        3.64339,
        3.64339,
        3.64339,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        2.936861,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        -28.611755,
        -28.611755,
        -28.611755,
        -28.611755,
        -28.611755,
        -28.611755,
        -28.611755,
        -28.611755,
        -28.611755,
        -28.611755,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    ],
    "peakResidualHours": [
      {
        "dow": 6,
        "hour": 8,
        "meanResidualKw": -28.611755,
        "sampleCount": 5,
      },
      {
        "dow": 6,
        "hour": 9,
        "meanResidualKw": -28.611755,
        "sampleCount": 5,
      },
      {
        "dow": 6,
        "hour": 10,
        "meanResidualKw": -28.611755,
        "sampleCount": 5,
      },
      {
        "dow": 6,
        "hour": 11,
        "meanResidualKw": -28.611755,
        "sampleCount": 5,
      },
      {
        "dow": 6,
        "hour": 12,
        "meanResidualKw": -28.611755,
        "sampleCount": 5,
      },
      {
        "dow": 6,
        "hour": 13,
        "meanResidualKw": -28.611755,
        "sampleCount": 5,
      },
      {
        "dow": 6,
        "hour": 14,
        "meanResidualKw": -28.611755,
        "sampleCount": 5,
      },
      {
        "dow": 6,
        "hour": 15,
        "meanResidualKw": -28.611755,
        "sampleCount": 5,
      },
      {
        "dow": 6,
        "hour": 16,
        "meanResidualKw": -28.611755,
        "sampleCount": 5,
      },
      {
        "dow": 6,
        "hour": 17,
        "meanResidualKw": -28.611755,
        "sampleCount": 5,
      },
    ],
  },
  "schemaVersion": "truthSnapshotV1",
  "truthConfidence": {
    "reasons": [
      "baselineR2=0.721464",
      "baselineTier=A",
      "granularityMinutes=15",
      "hasBillText=true",
      "hasWeatherDaily=true",
      "intervalDays=34.99",
      "weatherDays=35",
    ],
    "tier": "A",
  },
  "truthWarnings": [
    "truth.anomalies.residual_scale_unstable",
  ],
}
`;
